2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* e-sexp.c (eval_dump_result): `#if 0'ed out.

	* e-popup-menu.h (e_popup_menu_create): New prototype.

2000-07-10  Dan Winship  <danw@helixcode.com>

	* e-html-utils.c: Fix warnings.

2000-07-08  Christopher James Lahey  <clahey@helixcode.com>

	* e-list.c, e-list.h: Added e_list_duplicate.

2000-07-07  Christopher James Lahey  <clahey@helixcode.com>

	* e-util.c, e-util.h: Added e_strsplit to work around a bug in
	g_strsplit.

2000-07-07  Christopher James Lahey  <clahey@helixcode.com>

	* e-iterator.c, e-iterator.h, e-list-iterator.c,
	e-list-iterator.h: Added last and insert functions.

2000-07-06  Federico Mena Quintero  <federico@helixcode.com>

	* e-dialog-widgets.c: Added docstrings.  This file did not have
	them at all.  EEEEEEK!

2000-07-05  Dan Winship  <danw@helixcode.com>

	* e-sexp.c (e_sexp_parse): Kill debugging message

2000-07-03  Christopher James Lahey  <clahey@helixcode.com>

	* e-iterator.c, e-iterator.h, e-list-iterator.c,
	e-list-iterator.h, e-list.c, e-list.h: New list class with
	iterators.

	* e-canvas.c: Made it so that you don't get the same selection in
	the selection list more than once.

2000-07-01  Ettore Perazzoli  <ettore@helixcode.com>

	* e-gui-utils.h: #include <libgnomeui/gnome-messagebox.h>.  It's
	needed to be able to pass an appropriate @type arg to
	`e_notice()'.

2000-06-29  Jody Goldberg <jgoldberg@home.com>

	* e-canvas.c (e_canvas_init) : Init the InputContext members
	(e_canvas_class_init) : Add a handler for unrealize.
	(e_canvas_focus_in) : enable the input context.
	(e_canvas_focus_out) : enable the input context.
	(e_canvas_realize) : Create an input context.
	(e_canvas_unrealize) : New function to release the input context.

2000-06-28  Dan Winship  <danw@helixcode.com>

	* e-html-utils.c (url_extract): add ")" to the set of characters
	to back up over at the end of a potential URL.

2000-06-27  Ettore Perazzoli  <ettore@helixcode.com>
