@@ -1,3 +1,9 @@
+2000-07-11  Christopher James Lahey  <clahey@helixcode.com>
+
+	* e-canvas-vbox.c: Removed some debugging printfs.
+	
+	* e-canvas.c (e_canvas_unrealize): Call parent unrealize method.
+
 2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>
 
 	* e-sexp.c (eval_dump_result): `#if 0'ed out.
